fix horizontal scroll

--- a/source/sass/sections/feedback.scss
+++ b/source/sass/sections/feedback.scss
@@ -3,6 +3,7 @@
   margin: 0 auto;
   border: 1px solid $border-grey;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .feedback__col {
